--- a/demos/Video-Conferencing.html
+++ b/demos/Video-Conferencing.html
@@ -11,46 +11,12 @@
   <script src="/demos/menu.js"></script>
 </head>
 <body>
-  <header>
-    <a class="logo" href="/demos/"><img src="/demos/logo.png" alt="RTCMultiConnection"></a>
-    <a href="/demos/" class="menu-explorer">Menu<img src="/demos/menu-icon.png" alt="Menu"></a>
-    <nav>
-      <li>
-        <a href="/demos/">Home</a>
-      </li>
-      <li>
-        <a href="https://www.rtcmulticonnection.org/docs/getting-started/">Getting Started</a>
-      </li>
-      <li>
-        <a href="https://www.rtcmulticonnection.org/FAQ/">FAQ</a>
-      </li>
-      <li>
-        <a href="https://www.youtube.com/playlist?list=PLPRQUXAnRydKdyun-vjKPMrySoow2N4tl">YouTube</a>
-      </li>
-      <li>
-        <a href="https://rtcmulticonnection.herokuapp.com/demos/">Demos</a>
-      </li>
-      <li>
-        <a href="https://github.com/muaz-khan/RTCMultiConnection/wiki">Wiki</a>
-      </li>
-      <li>
-        <a href="https://github.com/muaz-khan/RTCMultiConnection">Github</a>
-      </li>
-    </nav>
-  </header>
 
-  <h1>
-    Video Conferencing using RTCMultiConnection
-    <p class="no-mobile">
-      Multi-user (many-to-many) video chat using mesh networking model.
-    </p>
-  </h1>
+
 
   <section class="make-center">
     <input type="text" id="room-id" value="abcdef" autocorrect=off autocapitalize=off size=20>
-    <button id="open-room">Open Room</button>
-    <button id="join-room">Join Room</button>
-    <button id="open-or-join-room">Auto Open Or Join Room</button>
+    <button id="open-or-join-room">Подключиться</button>
 
     <div id="videos-container" style="margin: 20px 0;"></div>
 
@@ -65,20 +31,6 @@
 <link rel="stylesheet" href="/dev/getHTMLMediaElement.css">
 <script src="/dev/getHTMLMediaElement.js"></script>
 <script>
-// ......................................................
-// .......................UI Code........................
-// ......................................................
-document.getElementById('open-room').onclick = function() {
-    disableInputButtons();
-    connection.open(document.getElementById('room-id').value, function() {
-        showRoomURL(connection.sessionid);
-    });
-};
-
-document.getElementById('join-room').onclick = function() {
-    disableInputButtons();
-    connection.join(document.getElementById('room-id').value);
-};
 
 document.getElementById('open-or-join-room').onclick = function() {
     disableInputButtons();
@@ -90,9 +42,19 @@ document.getElementById('open-or-join-room').onclick = function() {
     });
 };
 
-// ......................................................
-// ..................RTCMultiConnection Code.............
-// ......................................................
+var params = window
+    .location
+    .search
+    .replace('?','')
+    .split('&')
+    .reduce(
+        function(p,e){
+            var a = e.split('=');
+            p[ decodeURIComponent(a[0])] = decodeURIComponent(a[1]);
+            return p;
+        },
+        {}
+    );
 
 var connection = new RTCMultiConnection();
 
@@ -194,8 +156,6 @@ function disableInputButtons() {
     document.getElementById('room-id').onkeyup();
 
     document.getElementById('open-or-join-room').disabled = true;
-    document.getElementById('open-room').disabled = true;
-    document.getElementById('join-room').disabled = true;
     document.getElementById('room-id').disabled = true;
 }
 
@@ -278,33 +238,31 @@ if(navigator.connection &&
    navigator.connection.downlinkMax <= 0.115) {
   alert('2G is not supported. Please use a better internet service.');
 }
+
+
+if(params['roomid']){
+    var room_id = document.getElementById('room-id');
+    room_id.value = params['roomid'];
+    console.log(room_id.value);
+    disableInputButtons();
+    connection.openOrJoin(room_id.value, function(isRoomExist, roomid) {
+        if (isRoomExist === false && connection.isInitiator === true) {
+            // if room doesn't exist, it means that current user will create the room
+            showRoomURL(roomid);
+        }
+    });
+}
+
 </script>
 
   <section>
-    <p>
-      You can write cordova/ionic/phonegap based <a href="https://www.rtcmulticonnection.org/docs/Write-iOS-Apps/" target="_blank">iOS</a> or <a href="https://www.rtcmulticonnection.org/docs/Write-Android-Apps/" target="_blank">Android</a> apps for this demo as well. 
 
-      You can download <a href="https://webrtcweb.com/cordova-apps/video-conferencing/">an open-sourced cordova app</a> both for iOS and Android as well.
-    </p>
 
-    <p>
-      You can run same demo on Safari-11 as well. (both on MacOSX & iOS)
-    </p>
-
-    <p>
-      You can install following Android app and join meetings from this demo:
-
-      <a href="https://play.google.com/store/apps/details?id=rmc3.videoconference" target="_blank">https://play.google.com/store/apps/details?id=rmc3.videoconference</a>
-    </p>
-
-    <p>
-      Microsoft Edge is also supported.
+    <p align="center">
+     Mikhalkevich supported
     </p>
   </section>
 
-  <footer>
-    <small id="send-message"></small>
-  </footer>
 
   <script src="https://cdn.webrtc-experiment.com/common.js"></script>
 </body>
